docs/provider-azure/0.18/storage/v1alpha3/account.md
---
permalink: /provider-azure/0.18/storage/v1alpha3/account/
---

# storage.v1alpha3.account

"An Account is a managed resource that represents an Azure Blob Service Account."

## Index

* [`fn new(name)`](#fn-new)
* [`obj metadata`](#obj-metadata)
  * [`fn withAnnotations(annotations)`](#fn-metadatawithannotations)
  * [`fn withAnnotationsMixin(annotations)`](#fn-metadatawithannotationsmixin)
  * [`fn withClusterName(clusterName)`](#fn-metadatawithclustername)
  * [`fn withCreationTimestamp(creationTimestamp)`](#fn-metadatawithcreationtimestamp)
  * [`fn withDeletionGracePeriodSeconds(deletionGracePeriodSeconds)`](#fn-metadatawithdeletiongraceperiodseconds)
  * [`fn withDeletionTimestamp(deletionTimestamp)`](#fn-metadatawithdeletiontimestamp)
  * [`fn withFinalizers(finalizers)`](#fn-metadatawithfinalizers)
  * [`fn withFinalizersMixin(finalizers)`](#fn-metadatawithfinalizersmixin)
  * [`fn withGenerateName(generateName)`](#fn-metadatawithgeneratename)
  * [`fn withGeneration(generation)`](#fn-metadatawithgeneration)
  * [`fn withLabels(labels)`](#fn-metadatawithlabels)
  * [`fn withLabelsMixin(labels)`](#fn-metadatawithlabelsmixin)
  * [`fn withName(name)`](#fn-metadatawithname)
  * [`fn withNamespace(namespace)`](#fn-metadatawithnamespace)
  * [`fn withOwnerReferences(ownerReferences)`](#fn-metadatawithownerreferences)
  * [`fn withOwnerReferencesMixin(ownerReferences)`](#fn-metadatawithownerreferencesmixin)
  * [`fn withResourceVersion(resourceVersion)`](#fn-metadatawithresourceversion)
  * [`fn withSelfLink(selfLink)`](#fn-metadatawithselflink)
  * [`fn withUid(uid)`](#fn-metadatawithuid)
* [`obj spec`](#obj-spec)
  * [`fn withDeletionPolicy(deletionPolicy)`](#fn-specwithdeletionpolicy)
  * [`fn withResourceGroupName(resourceGroupName)`](#fn-specwithresourcegroupname)
  * [`obj spec.providerConfigRef`](#obj-specproviderconfigref)
    * [`fn withName(name)`](#fn-specproviderconfigrefwithname)
  * [`obj spec.providerRef`](#obj-specproviderref)
    * [`fn withName(name)`](#fn-specproviderrefwithname)
  * [`obj spec.storageAccountSpec`](#obj-specstorageaccountspec)
    * [`fn withKind(kind)`](#fn-specstorageaccountspecwithkind)
    * [`fn withLocation(location)`](#fn-specstorageaccountspecwithlocation)
    * [`fn withTags(tags)`](#fn-specstorageaccountspecwithtags)
    * [`fn withTagsMixin(tags)`](#fn-specstorageaccountspecwithtagsmixin)
    * [`obj spec.storageAccountSpec.identity`](#obj-specstorageaccountspecidentity)
      * [`fn withPrincipalId(principalId)`](#fn-specstorageaccountspecidentitywithprincipalid)
      * [`fn withTenantId(tenantId)`](#fn-specstorageaccountspecidentitywithtenantid)
      * [`fn withType(type)`](#fn-specstorageaccountspecidentitywithtype)
    * [`obj spec.storageAccountSpec.properties`](#obj-specstorageaccountspecproperties)
      * [`fn withAccessTier(accessTier)`](#fn-specstorageaccountspecpropertieswithaccesstier)
      * [`fn withSupportsHttpsTrafficOnly(supportsHttpsTrafficOnly)`](#fn-specstorageaccountspecpropertieswithsupportshttpstrafficonly)
      * [`obj spec.storageAccountSpec.properties.customDomain`](#obj-specstorageaccountspecpropertiescustomdomain)
        * [`fn withName(name)`](#fn-specstorageaccountspecpropertiescustomdomainwithname)
        * [`fn withUseSubDomainName(useSubDomainName)`](#fn-specstorageaccountspecpropertiescustomdomainwithusesubdomainname)
      * [`obj spec.storageAccountSpec.properties.encryption`](#obj-specstorageaccountspecpropertiesencryption)
        * [`fn withKeySource(keySource)`](#fn-specstorageaccountspecpropertiesencryptionwithkeysource)
        * [`obj spec.storageAccountSpec.properties.encryption.keyvaultproperties`](#obj-specstorageaccountspecpropertiesencryptionkeyvaultproperties)
          * [`fn withKeyname(keyname)`](#fn-specstorageaccountspecpropertiesencryptionkeyvaultpropertieswithkeyname)
          * [`fn withKeyvaulturi(keyvaulturi)`](#fn-specstorageaccountspecpropertiesencryptionkeyvaultpropertieswithkeyvaulturi)
          * [`fn withKeyversion(keyversion)`](#fn-specstorageaccountspecpropertiesencryptionkeyvaultpropertieswithkeyversion)
        * [`obj spec.storageAccountSpec.properties.encryption.services`](#obj-specstorageaccountspecpropertiesencryptionservices)
          * [`fn withBlob(blob)`](#fn-specstorageaccountspecpropertiesencryptionserviceswithblob)
          * [`fn withFile(file)`](#fn-specstorageaccountspecpropertiesencryptionserviceswithfile)
      * [`obj spec.storageAccountSpec.properties.networkAcls`](#obj-specstorageaccountspecpropertiesnetworkacls)
        * [`fn withBypass(bypass)`](#fn-specstorageaccountspecpropertiesnetworkaclswithbypass)
        * [`fn withDefaultAction(defaultAction)`](#fn-specstorageaccountspecpropertiesnetworkaclswithdefaultaction)
        * [`fn withIpRules(ipRules)`](#fn-specstorageaccountspecpropertiesnetworkaclswithiprules)
        * [`fn withIpRulesMixin(ipRules)`](#fn-specstorageaccountspecpropertiesnetworkaclswithiprulesmixin)
        * [`fn withVirtualNetworkRules(virtualNetworkRules)`](#fn-specstorageaccountspecpropertiesnetworkaclswithvirtualnetworkrules)
        * [`fn withVirtualNetworkRulesMixin(virtualNetworkRules)`](#fn-specstorageaccountspecpropertiesnetworkaclswithvirtualnetworkrulesmixin)
        * [`obj spec.storageAccountSpec.properties.networkAcls.ipRules`](#obj-specstorageaccountspecpropertiesnetworkaclsiprules)
          * [`fn withAction(action)`](#fn-specstorageaccountspecpropertiesnetworkaclsipruleswithaction)
          * [`fn withValue(value)`](#fn-specstorageaccountspecpropertiesnetworkaclsipruleswithvalue)
        * [`obj spec.storageAccountSpec.properties.networkAcls.virtualNetworkRules`](#obj-specstorageaccountspecpropertiesnetworkaclsvirtualnetworkrules)
          * [`fn withAction(action)`](#fn-specstorageaccountspecpropertiesnetworkaclsvirtualnetworkruleswithaction)
          * [`fn withId(id)`](#fn-specstorageaccountspecpropertiesnetworkaclsvirtualnetworkruleswithid)
    * [`obj spec.storageAccountSpec.sku`](#obj-specstorageaccountspecsku)
      * [`fn withCapabilities(capabilities)`](#fn-specstorageaccountspecskuwithcapabilities)
      * [`fn withCapabilitiesMixin(capabilities)`](#fn-specstorageaccountspecskuwithcapabilitiesmixin)
      * [`fn withKind(kind)`](#fn-specstorageaccountspecskuwithkind)
      * [`fn withLocations(locations)`](#fn-specstorageaccountspecskuwithlocations)
      * [`fn withLocationsMixin(locations)`](#fn-specstorageaccountspecskuwithlocationsmixin)
      * [`fn withName(name)`](#fn-specstorageaccountspecskuwithname)
      * [`fn withResourceType(resourceType)`](#fn-specstorageaccountspecskuwithresourcetype)
      * [`fn withTier(tier)`](#fn-specstorageaccountspecskuwithtier)
      * [`obj spec.storageAccountSpec.sku.capabilities`](#obj-specstorageaccountspecskucapabilities)
        * [`fn withName(name)`](#fn-specstorageaccountspecskucapabilitieswithname)
        * [`fn withValue(value)`](#fn-specstorageaccountspecskucapabilitieswithvalue)
  * [`obj spec.writeConnectionSecretToRef`](#obj-specwriteconnectionsecrettoref)
    * [`fn withName(name)`](#fn-specwriteconnectionsecrettorefwithname)
    * [`fn withNamespace(namespace)`](#fn-specwriteconnectionsecrettorefwithnamespace)

## Fields

### fn new

```ts
new(name)
```

new returns an instance of Account

## obj metadata

"ObjectMeta is metadata that all persisted resources must have, which includes all objects users must create."

### fn metadata.withAnnotations

```ts
withAnnotations(annotations)
```

"Annotations is an unstructured key value map stored with a resource that may be set by external tools to store and retrieve arbitrary metadata. They are not queryable and should be preserved when modifying objects. More info: http://kubernetes.io/docs/user-guide/annotations"

### fn metadata.withAnnotationsMixin

```ts
withAnnotationsMixin(annotations)
```

"Annotations is an unstructured key value map stored with a resource that may be set by external tools to store and retrieve arbitrary metadata. They are not queryable and should be preserved when modifying objects. More info: http://kubernetes.io/docs/user-guide/annotations"

**Note:** This function appends passed data to existing values

### fn metadata.withClusterName

```ts
withClusterName(clusterName)
```

"The name of the cluster which the object belongs to. This is used to distinguish resources with same name and namespace in different clusters. This field is not set anywhere right now and apiserver is going to ignore it if set in create or update request."

### fn metadata.withCreationTimestamp

```ts
withCreationTimestamp(creationTimestamp)
```

"Time is a wrapper around time.Time which supports correct marshaling to YAML and JSON.  Wrappers are provided for many of the factory methods that the time package offers."

### fn metadata.withDeletionGracePeriodSeconds

```ts
withDeletionGracePeriodSeconds(deletionGracePeriodSeconds)
```

"Number of seconds allowed for this object to gracefully terminate before it will be removed from the system. Only set when deletionTimestamp is also set. May only be shortened. Read-only."

### fn metadata.withDeletionTimestamp

```ts
withDeletionTimestamp(deletionTimestamp)
```

"Time is a wrapper around time.Time which supports correct marshaling to YAML and JSON.  Wrappers are provided for many of the factory methods that the time package offers."

### fn metadata.withFinalizers

```ts
withFinalizers(finalizers)
```

"Must be empty before the object is deleted from the registry. Each entry is an identifier for the responsible component that will remove the entry from the list. If the deletionTimestamp of the object is non-nil, entries in this list can only be removed. Finalizers may be processed and removed in any order.  Order is NOT enforced because it introduces significant risk of stuck finalizers. finalizers is a shared field, any actor with permission can reorder it. If the finalizer list is processed in order, then this can lead to a situation in which the component responsible for the first finalizer in the list is waiting for a signal (field value, external system, or other) produced by a component responsible for a finalizer later in the list, resulting in a deadlock. Without enforced ordering finalizers are free to order amongst themselves and are not vulnerable to ordering changes in the list."

### fn metadata.withFinalizersMixin

```ts
withFinalizersMixin(finalizers)
```

"Must be empty before the object is deleted from the registry. Each entry is an identifier for the responsible component that will remove the entry from the list. If the deletionTimestamp of the object is non-nil, entries in this list can only be removed. Finalizers may be processed and removed in any order.  Order is NOT enforced because it introduces significant risk of stuck finalizers. finalizers is a shared field, any actor with permission can reorder it. If the finalizer list is processed in order, then this can lead to a situation in which the component responsible for the first finalizer in the list is waiting for a signal (field value, external system, or other) produced by a component responsible for a finalizer later in the list, resulting in a deadlock. Without enforced ordering finalizers are free to order amongst themselves and are not vulnerable to ordering changes in the list."

**Note:** This function appends passed data to existing values

### fn metadata.withGenerateName

```ts
withGenerateName(generateName)
```

"GenerateName is an optional prefix, used by the server, to generate a unique name ONLY IF the Name field has not been provided. If this field is used, the name returned to the client will be different than the name passed. This value will also be combined with a unique suffix. The provided value has the same validation rules as the Name field, and may be truncated by the length of the suffix required to make the value unique on the server.\n\nIf this field is specified and the generated name exists, the server will NOT return a 409 - instead, it will either return 201 Created or 500 with Reason ServerTimeout indicating a unique name could not be found in the time allotted, and the client should retry (optionally after the time indicated in the Retry-After header).\n\nApplied only if Name is not specified. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#idempotency"

### fn metadata.withGeneration

```ts
withGeneration(generation)
```

"A sequence number representing a specific generation of the desired state. Populated by the system. Read-only."

### fn metadata.withLabels

```ts
withLabels(labels)
```

"Map of string keys and values that can be used to organize and categorize (scope and select) objects. May match selectors of replication controllers and services. More info: http://kubernetes.io/docs/user-guide/labels"

### fn metadata.withLabelsMixin

```ts
withLabelsMixin(labels)
```

"Map of string keys and values that can be used to organize and categorize (scope and select) objects. May match selectors of replication controllers and services. More info: http://kubernetes.io/docs/user-guide/labels"

**Note:** This function appends passed data to existing values

### fn metadata.withName

```ts
withName(name)
```

"Name must be unique within a namespace. Is required when creating resources, although some resources may allow a client to request the generation of an appropriate name automatically. Name is primarily intended for creation idempotence and configuration definition. Cannot be updated. More info: http://kubernetes.io/docs/user-guide/identifiers#names"

### fn metadata.withNamespace

```ts
withNamespace(namespace)
```

"Namespace defines the space within which each name must be unique. An empty namespace is equivalent to the \"default\" namespace, but \"default\" is the canonical representation. Not all objects are required to be scoped to a namespace - the value of this field for those objects will be empty.\n\nMust be a DNS_LABEL. Cannot be updated. More info: http://kubernetes.io/docs/user-guide/namespaces"

### fn metadata.withOwnerReferences

```ts
withOwnerReferences(ownerReferences)
```

"List of objects depended by this object. If ALL objects in the list have been deleted, this object will be garbage collected. If this object is managed by a controller, then an entry in this list will point to this controller, with the controller field set to true. There cannot be more than one managing controller."

### fn metadata.withOwnerReferencesMixin

```ts
withOwnerReferencesMixin(ownerReferences)
```

"List of objects depended by this object. If ALL objects in the list have been deleted, this object will be garbage collected. If this object is managed by a controller, then an entry in this list will point to this controller, with the controller field set to true. There cannot be more than one managing controller."

**Note:** This function appends passed data to existing values

### fn metadata.withResourceVersion

```ts
withResourceVersion(resourceVersion)
```

"An opaque value that represents the internal version of this object that can be used by clients to determine when objects have changed. May be used for optimistic concurrency, change detection, and the watch operation on a resource or set of resources. Clients must treat these values as opaque and passed unmodified back to the server. They may only be valid for a particular resource or set of resources.\n\nPopulated by the system. Read-only. Value must be treated as opaque by clients and . More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#concurrency-control-and-consistency"

### fn metadata.withSelfLink

```ts
withSelfLink(selfLink)
```

"SelfLink is a URL representing this object. Populated by the system. Read-only.\n\nDEPRECATED Kubernetes will stop propagating this field in 1.20 release and the field is planned to be removed in 1.21 release."

### fn metadata.withUid

```ts
withUid(uid)
```

"UID is the unique in time and space value for this object. It is typically generated by the server on successful creation of a resource and is not allowed to change on PUT operations.\n\nPopulated by the system. Read-only. More info: http://kubernetes.io/docs/user-guide/identifiers#uids"

## obj spec

"An AccountSpec defines the desired state of an Account."

### fn spec.withDeletionPolicy

```ts
withDeletionPolicy(deletionPolicy)
```

"DeletionPolicy specifies what will happen to the underlying external when this managed resource is deleted - either \"Delete\" or \"Orphan\" the external resource."

### fn spec.withResourceGroupName

```ts
withResourceGroupName(resourceGroupName)
```

"ResourceGroupName specifies the resource group for this Account."

## obj spec.providerConfigRef

"ProviderConfigReference specifies how the provider that will be used to create, observe, update, and delete this managed resource should be configured."

### fn spec.providerConfigRef.withName

```ts
withName(name)
```

"Name of the referenced object."

## obj spec.providerRef

"ProviderReference specifies the provider that will be used to create, observe, update, and delete this managed resource. Deprecated: Please use ProviderConfigReference, i.e. `providerConfigRef`"

### fn spec.providerRef.withName

```ts
withName(name)
```

"Name of the referenced object."

## obj spec.storageAccountSpec

"StorageAccountSpec specifies the desired state of this Account."

### fn spec.storageAccountSpec.withKind

```ts
withKind(kind)
```

"Kind - Indicates the type of storage account. Possible values include: 'Storage', 'BlobStorage'"

### fn spec.storageAccountSpec.withLocation

```ts
withLocation(location)
```

"Location - The location of the resource. This will be one of the supported and registered Azure Geo Regions (e.g. West US, East US, Southeast Asia, etc.)."

### fn spec.storageAccountSpec.withTags

```ts
withTags(tags)
```

"Tags - A list of key value pairs that describe the resource. These tags can be used for viewing and grouping this resource (across resource groups). A maximum of 15 tags can be provided for a resource. Each tag must have a key with a length no greater than 128 characters and a value with a length no greater than 256 characters."

### fn spec.storageAccountSpec.withTagsMixin

```ts
withTagsMixin(tags)
```

"Tags - A list of key value pairs that describe the resource. These tags can be used for viewing and grouping this resource (across resource groups). A maximum of 15 tags can be provided for a resource. Each tag must have a key with a length no greater than 128 characters and a value with a length no greater than 256 characters."

**Note:** This function appends passed data to existing values

## obj spec.storageAccountSpec.identity

"Identity - The identity of the resource."

### fn spec.storageAccountSpec.identity.withPrincipalId

```ts
withPrincipalId(principalId)
```

"PrincipalID - The principal ID of resource identity."

### fn spec.storageAccountSpec.identity.withTenantId

```ts
withTenantId(tenantId)
```

"TenantID - The tenant ID of resource."

### fn spec.storageAccountSpec.identity.withType

```ts
withType(type)
```

"Type - The identity type."

## obj spec.storageAccountSpec.properties

"StorageAccountSpecProperties - The parameters used to create the storage account."

### fn spec.storageAccountSpec.properties.withAccessTier

```ts
withAccessTier(accessTier)
```

"AccessTier - Required for storage accounts where kind = BlobStorage. The access tier used for billing. Possible values include: 'Hot', 'Cool'"

### fn spec.storageAccountSpec.properties.withSupportsHttpsTrafficOnly

```ts
withSupportsHttpsTrafficOnly(supportsHttpsTrafficOnly)
```

"EnableHTTPSTrafficOnly - Allows https traffic only to storage service if sets to true."

## obj spec.storageAccountSpec.properties.customDomain

"CustomDomain - User domain assigned to the storage account. Name is the CNAME source. Only one custom domain is supported per storage account at this time. to clear the existing custom domain, use an empty string for the custom domain name property."

### fn spec.storageAccountSpec.properties.customDomain.withName

```ts
withName(name)
```

"Name - custom domain name assigned to the storage account. Name is the CNAME source."

### fn spec.storageAccountSpec.properties.customDomain.withUseSubDomainName

```ts
withUseSubDomainName(useSubDomainName)
```

"UseSubDomainName - Indicates whether indirect CNAME validation is enabled."

## obj spec.storageAccountSpec.properties.encryption

"Encryption - Provides the encryption settings on the account. If left unspecified the account encryption settings will remain the same. The default setting is unencrypted."

### fn spec.storageAccountSpec.properties.encryption.withKeySource

```ts
withKeySource(keySource)
```

"KeySource - The encryption keySource (provider). \n Possible values (case-insensitive):  Microsoft.Storage, Microsoft.Keyvault"

## obj spec.storageAccountSpec.properties.encryption.keyvaultproperties

"KeyVaultProperties - Properties provided by key vault."

### fn spec.storageAccountSpec.properties.encryption.keyvaultproperties.withKeyname

```ts
withKeyname(keyname)
```

"KeyName - The name of KeyVault key."

### fn spec.storageAccountSpec.properties.encryption.keyvaultproperties.withKeyvaulturi

```ts
withKeyvaulturi(keyvaulturi)
```

"KeyVaultURI - The Uri of KeyVault."

### fn spec.storageAccountSpec.properties.encryption.keyvaultproperties.withKeyversion

```ts
withKeyversion(keyversion)
```

"KeyVersion - The version of KeyVault key."

## obj spec.storageAccountSpec.properties.encryption.services

"Services - List of services which support encryption."

### fn spec.storageAccountSpec.properties.encryption.services.withBlob

```ts
withBlob(blob)
```

"Blob - The encryption function of the blob storage service."

### fn spec.storageAccountSpec.properties.encryption.services.withFile

```ts
withFile(file)
```

"File - The encryption function of the file storage service."

## obj spec.storageAccountSpec.properties.networkAcls

"NetworkRuleSet - Network rule set"

### fn spec.storageAccountSpec.properties.networkAcls.withBypass

```ts
withBypass(bypass)
```

"Bypass - Specifies whether traffic is bypassed for Logging/Metrics/AzureServices. Possible values are any combination of Logging|Metrics|AzureServices (For example, \"Logging, Metrics\"), or None to bypass none of those traffics. Possible values include: 'None', 'Logging', 'Metrics', 'AzureServices'"

### fn spec.storageAccountSpec.properties.networkAcls.withDefaultAction

```ts
withDefaultAction(defaultAction)
```

"DefaultAction - Specifies the default action of allow or deny when no other rules match. \n Possible values include: 'Allow', 'Deny'"

### fn spec.storageAccountSpec.properties.networkAcls.withIpRules

```ts
withIpRules(ipRules)
```

"IPRules - Sets the IP ACL rules"

### fn spec.storageAccountSpec.properties.networkAcls.withIpRulesMixin

```ts
withIpRulesMixin(ipRules)
```

"IPRules - Sets the IP ACL rules"

**Note:** This function appends passed data to existing values

### fn spec.storageAccountSpec.properties.networkAcls.withVirtualNetworkRules

```ts
withVirtualNetworkRules(virtualNetworkRules)
```

"VirtualNetworkRules - Sets the virtual network rules"

### fn spec.storageAccountSpec.properties.networkAcls.withVirtualNetworkRulesMixin

```ts
withVirtualNetworkRulesMixin(virtualNetworkRules)
```

"VirtualNetworkRules - Sets the virtual network rules"

**Note:** This function appends passed data to existing values

## obj spec.storageAccountSpec.properties.networkAcls.ipRules

"IPRules - Sets the IP ACL rules"

### fn spec.storageAccountSpec.properties.networkAcls.ipRules.withAction

```ts
withAction(action)
```

"Action - The action of IP ACL rule. Possible values include: 'Allow'"

### fn spec.storageAccountSpec.properties.networkAcls.ipRules.withValue

```ts
withValue(value)
```

"IPAddressOrRange - Specifies the IP or IP range in CIDR format. Only IPV4 address is allowed."

## obj spec.storageAccountSpec.properties.networkAcls.virtualNetworkRules

"VirtualNetworkRules - Sets the virtual network rules"

### fn spec.storageAccountSpec.properties.networkAcls.virtualNetworkRules.withAction

```ts
withAction(action)
```

"Action - The action of virtual network rule. Possible values include: 'Allow'"

### fn spec.storageAccountSpec.properties.networkAcls.virtualNetworkRules.withId

```ts
withId(id)
```

"VirtualNetworkResourceID - Resource ID of a subnet, for example: /subscriptions/{subscriptionId}/resourceGroups/{groupName}/providers/Microsoft.Network/virtualNetworks/{vnetName}/subnets/{subnetName}."

## obj spec.storageAccountSpec.sku

"Sku of the storage account."

### fn spec.storageAccountSpec.sku.withCapabilities

```ts
withCapabilities(capabilities)
```

"Capabilities - The capability information in the specified sku, including file encryption, network acls, change notification, etc."

### fn spec.storageAccountSpec.sku.withCapabilitiesMixin

```ts
withCapabilitiesMixin(capabilities)
```

"Capabilities - The capability information in the specified sku, including file encryption, network acls, change notification, etc."

**Note:** This function appends passed data to existing values

### fn spec.storageAccountSpec.sku.withKind

```ts
withKind(kind)
```

"Kind - Indicates the type of storage account. \n Possible values include: 'Storage', 'BlobStorage'"

### fn spec.storageAccountSpec.sku.withLocations

```ts
withLocations(locations)
```

"Locations - The set of locations that the Sku is available. This will be supported and registered Azure Geo Regions (e.g. West US, East US, Southeast Asia, etc.)."

### fn spec.storageAccountSpec.sku.withLocationsMixin

```ts
withLocationsMixin(locations)
```

"Locations - The set of locations that the Sku is available. This will be supported and registered Azure Geo Regions (e.g. West US, East US, Southeast Asia, etc.)."

**Note:** This function appends passed data to existing values

### fn spec.storageAccountSpec.sku.withName

```ts
withName(name)
```

"Name - Gets or sets the sku name. Required for account creation; optional for update. Note that in older versions, sku name was called accountType. \n Possible values include: 'Standard_LRS', 'Standard_GRS', 'Standard_RAGRS', 'Standard_ZRS', 'Premium_LRS'"

### fn spec.storageAccountSpec.sku.withResourceType

```ts
withResourceType(resourceType)
```

"ResourceType - The type of the resource, usually it is 'storageAccounts'."

### fn spec.storageAccountSpec.sku.withTier

```ts
withTier(tier)
```

"Tier - Gets the sku tier. This is based on the Sku name. \n Possible values include: 'Standard', 'Premium'"

## obj spec.storageAccountSpec.sku.capabilities

"Capabilities - The capability information in the specified sku, including file encryption, network acls, change notification, etc."

### fn spec.storageAccountSpec.sku.capabilities.withName

```ts
withName(name)
```

"Name - The name of capability, The capability information in the specified sku, including file encryption, network acls, change notification, etc."

### fn spec.storageAccountSpec.sku.capabilities.withValue

```ts
withValue(value)
```

"Value - A string value to indicate states of given capability. Possibly 'true' or 'false'."

## obj spec.writeConnectionSecretToRef

"WriteConnectionSecretToReference specifies the namespace and name of a Secret to which any connection details for this managed resource should be written. Connection details frequently include the endpoint, username, and password required to connect to the managed resource."

### fn spec.writeConnectionSecretToRef.withName

```ts
withName(name)
```

"Name of the secret."

### fn spec.writeConnectionSecretToRef.withNamespace

```ts
withNamespace(namespace)
```

"Namespace of the secret."